--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,32 @@ python-http-client==2.2.1
 sendgrid==3.6.3
 simplejson==3.10.0
 six==1.10.0
+appdirs==1.4.0
+click==6.7
+Django==1.10.5
+django-dotenv==1.4.1
+gunicorn==19.7.1
+olefile==0.44
+packaging==16.8
+Pillow==4.0.0
+pyparsing==2.1.10
+python-http-client==2.2.1
+sendgrid==3.6.3
+sendgrid-django==4.0.4
+simplejson==3.10.0
+six==1.10.0
+appdirs==1.4.0
+click==6.7
+Django==1.10.5
+django-dotenv==1.4.1
+gunicorn==19.7.1
+olefile==0.44
+packaging==16.8
+Pillow==4.0.0
+pyparsing==2.1.10
+python-http-client==2.2.1
+sendgrid==3.6.3
+sendgrid-django==4.0.4
+simplejson==3.10.0
+six==1.10.0
+whitenoise==3.3.0
