--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,18 @@
 appdirs==1.4.0
 click==6.7
-Django==1.10.5
-olefile==0.44
-packaging==16.8
-Pillow==4.0.0
-pyparsing==2.1.10
-python-dotenv==0.6.3
-python-http-client==2.2.1
-sendgrid==3.6.3
-simplejson==3.10.0
-six==1.10.0
-appdirs==1.4.0
-click==6.7
-Django==1.10.5
+confusable-homoglyphs==3.1.1
+Django==1.10.8
 django-dotenv==1.4.1
+django-registration==2.4.1
+django-sendgrid-v5==0.6.893
+future==0.16.0
 gunicorn==19.7.1
 olefile==0.44
 packaging==16.8
 Pillow==4.0.0
 pyparsing==2.1.10
-python-http-client==2.2.1
-sendgrid==3.6.3
-sendgrid-django==4.0.4
-simplejson==3.10.0
-six==1.10.0
-appdirs==1.4.0
-click==6.7
-Django==1.10.5
-django-dotenv==1.4.1
-gunicorn==19.7.1
-olefile==0.44
-packaging==16.8
-Pillow==4.0.0
-pyparsing==2.1.10
-python-http-client==2.2.1
-sendgrid==3.6.3
-sendgrid-django==4.0.4
+python-http-client==3.1.0
+sendgrid==5.4.1
 simplejson==3.10.0
 six==1.10.0
 whitenoise==3.3.0
